k8s/manifest/backend-deployment.yml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-backend
  namespace: jerney
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 402631153856.dkr.ecr.ap-south-1.amazonaws.com/jerney-backend:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "2"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: jerney-backend
  namespace: jerney
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
