k8s/manifest/frontend-deployment.yml
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: jerney
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 402631153856.dkr.ecr.ap-south-1.amazonaws.com/jerney-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "2"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: jerney
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
